# my_desktop_pet

./: BUILD.md  CMakeLists.txt  README.md  build.bat  gen_keys.py  install_driver.bat  问题.md
.trae/skills/win32-gui-click-fix/: SKILL.md
.trae/skills/win32-gui-pitfalls/: SKILL.md
driver/: build_driver.bat  hideproc.c  hideproc.vcxproj
include/: crypto.h  crypto_key.h  hotkey.h  rsa_private.h  rsa_public.h  screenshot.h  stealth.h
src/: crypto.cpp  hotkey.cpp  main.cpp  screenshot.cpp  stealth.cpp
